[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameLogic/Country/Country.gd" type="Script" id=1]
[ext_resource path="res://GameLogic/Country/Intelligence/Intelligence.gd" type="Script" id=2]
[ext_resource path="res://GameLogic/Country/DetectionProcessing.gd" type="Script" id=3]

[node name="Country" type="Node"]
script = ExtResource( 1 )

[node name="Buildings" type="Node" parent="."]

[node name="Units" type="Node" parent="."]

[node name="Missiles" type="Node" parent="."]

[node name="Intelligence" type="Node" parent="."]
script = ExtResource( 2 )

[node name="DetectionProcessing" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="ChangedDetection" from="DetectionProcessing" to="Intelligence" method="_on_DetectionProcessing_ChangedDetection"]
[connection signal="GainedDetection" from="DetectionProcessing" to="Intelligence" method="_on_DetectionProcessing_GainedDetection"]
[connection signal="LostDetection" from="DetectionProcessing" to="Intelligence" method="_on_DetectionProcessing_LostDetection"]
